--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
