--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/redux": "^3.6.0",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "echarts": "^5.1.1",
+    "echarts-for-react": "^3.0.1",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/echarts": "^4.9.7",
     "@types/react-router-dom": "^5.1.6"
   }
 }
